--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <span class="fa-stack fa-4x">
                                     <i class=" fa icon-3 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
-                                <h4>
+                                <h4 style="text-align: justify">
                                     <strong>Oferta de servicios para el manejo ambiental de residuos hospitalarios y peligrosos.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
@@ -143,8 +143,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-4 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Convenios de acercamiento al sistema de Salud y recuperación de cartera.</strong>
@@ -156,8 +156,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-5 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Oferta de medicamentos POS y No Pos.</strong>
@@ -169,8 +169,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-6 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Oferta del laboratorio Unidosis.</strong>
@@ -184,8 +184,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+
+                               <i class=" fa icon-7 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Oferta de tecnologiá biomédica.</strong>
@@ -197,8 +197,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-8 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong> Soporte y diseño del programa de aseguramiento 14 metrológico.</strong>
@@ -210,8 +210,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-9 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Soporte técnico para la calibración de equipos biomédicos.</strong>
@@ -223,8 +223,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-10 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Soporte técnico para mantenimiento correctivo y 16 preventivo de equipo biomédico.</strong>
@@ -238,8 +238,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-11 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong> Oferta de dispositivos médicos e insumos.</strong>
@@ -251,8 +251,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-12 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Programa de entrenamiento en el manejo de equipos biomédicos para el personal asistencial.</strong>
@@ -264,8 +264,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-13 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong> Asesoría y acompañamiento para el sedarrollo de modelos de atención.</strong>
@@ -277,8 +277,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-14 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Programa de entrenamiento en el manejo de equipos biomédicos para el personal asistencial.</strong>
@@ -292,8 +292,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-15 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Programas de capacitación en el área de la salud para el personal asistencial.</strong>
@@ -305,8 +305,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-16 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Oferta de equipos para la información y comunicación.</strong>
@@ -318,8 +318,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-17 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Oferta de papelería y material de oficina.</strong>
@@ -331,8 +331,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-18 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Oferta de material para odontología.</strong>
@@ -346,8 +346,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-1 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Formación integral en competencias de la salud y prácticas de buen Gobierno.</strong>
@@ -359,8 +359,8 @@
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+
+                                <i class=" fa icon-2 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
                                 <h4>
                                     <strong>Formación continua, acompañamiento y consecución de recursos para el desarrollo científico y tecnológico</strong>
