colocacion de mapa

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <span class="fa-stack fa-4x">
                                     <i class=" fa icon-3 text-primary fa-stack-2x" style="color: white"></i>
                             </span>
-                                <h4 style="text-align: justify">
+                                <h4>
                                     <strong>Oferta de servicios para el manejo ambiental de residuos hospitalarios y peligrosos.</strong>
                                 </h4>
                                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
@@ -444,12 +444,12 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1979.4950215795486!2d-73.1137246!3d7.1271473!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x130ed28f17ba26f0!2sRivera+Plaza!5e0!3m2!1ses!2ses!4v1447734857802" width="100%" height="100%" frameborder="0" style="border:0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <br />
-        <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-        </iframe>
+
+
+
+
     </section>
 
     <!-- Footer -->
