--- a/index.html
+++ b/index.html
@@ -456,7 +456,8 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
+                <div class="col-lg-4 text-center">
+                    <br><br><br>
                     <h4><strong>Start Bootstrap</strong>
                     </h4>
                     <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
@@ -479,6 +480,28 @@
                     </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                </div>
+                <div class="col-lg-8">
+                    <h4><strong>Contacto Corporativo</strong></h4>
+                    <form>
+                        <div class="form-group">
+                            <label for="inputNombre">Nombre</label>
+                            <input type="text" class="form-control"  placeholder="Nombre" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail">Email</label>
+                            <input type="email" class="form-control" placeholder="Email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail">Asunto</label>
+                            <input type="text" class="form-control" placeholder="Asunto" required>
+                        </div>
+                        <div class="form-group">
+                        <textarea class="form-control" rows="3"></textarea>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Entrar</button>
+                    </form>
                 </div>
             </div>
         </div>
