--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <a href="#about" onclick = $("#menu-close").click(); >Nosotros</a>
             </li>
             <li>
-                <a href="#services" onclick = $("#menu-close").click(); ></a>
+                <a href="#services" onclick = $("#menu-close").click(); >Servicios</a>
             </li>
             <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >Servicios</a>
+                <a href="#portfolio" onclick = $("#menu-close").click(); >Donde Estamos</a>
             </li>
             <li>
                 <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
@@ -64,9 +64,9 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <img src="img/logo.svg" style="width: 50%; height: 50%; margin: auto" alt="imagen SVG" title="" />
-            <h3>Free Bootstrap Themes &amp; Templates</h3>
+            <!-- <h3>Free Bootstrap Themes &amp; Templates</h3> -->
             <br>
-            <!----><a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+            <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
         </div>
     </header>
 
@@ -83,30 +83,30 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
-                                </a>
+
+                                    <img class="img-portfolio img-responsive" src="img/arauca.svg">
+
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-                                </a>
+
+                                    <img class="img-portfolio img-responsive" src="img/cesar.svg">
+
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
+
+                                    <img class="img-portfolio img-responsive" src="img/norte.svg">
+
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
-                                </a>
+
+                                    <img class="img-portfolio img-responsive" src="img/santander.svg">
+
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
+                    <h2>Servicios</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
@@ -433,7 +433,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                    <h2>Nosotros</h2>
                     <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
                 </div>
             </div>
