--- a/index2.html
+++ b/index2.html
@@ -57,9 +57,6 @@
             <li>
                 <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
             </li>
-            <li>
-                <a href="index2.html/#about" onclick = $("#menu-close").click(); >prueba</a>
-            </li>
         </ul>
     </nav>
 
@@ -409,44 +406,7 @@
     </section>
 
     <!-- Callout -->
-    <aside class="callout">
-      <div class="container">
-  <div class="row">
-    <h1 style="color:rgb(0, 0, 0)" class="text-center">Galeria</h1>
-    <div class="row">
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 1"><img src="img/1.jpg" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 2"><img src="img/2.jpg" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 3"><img src="img/3.jpg" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 4"><img src="img/4.jpg" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 5"><img src="img/5.jpg" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 6"><img src="img/6.jpg" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 8"><img src="img/7.jpg" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a title="Image 9"><img src="img/8.jpg" class="thumbnail img-responsive"></a></div>
-    </div>
 
-</div>
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-  <div class="modal-content">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal">×</button>
-		<h3 class="modal-title">Heading</h3>
-	</div>
-	<div class="modal-body">
-
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-default" data-dismiss="modal">Close</button>
-	</div>
-   </div>
-  </div>
-</div>
-
-
-        <!-- <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
-        </div> -->
-    </aside>
 
     <!-- Portfolio -->
 
@@ -457,7 +417,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>The buttons below are impossible to resist.</h3>
-                    <a href="index2.html#about" class="btn btn-lg btn-light">Click Me!</a>
+                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
                     <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
                 </div>
             </div>
@@ -479,15 +439,7 @@
     </section>
 
     <!-- Map -->
-    <section id="contact" class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1979.4950215795486!2d-73.1137246!3d7.1271473!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x130ed28f17ba26f0!2sRivera+Plaza!5e0!3m2!1ses!2ses!4v1447734857802" width="100%" height="100%" frameborder="0" style="border:0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-        <br />
-
-
-
-
-    </section>
-
+    
     <!-- Footer -->
     <footer>
         <div class="container">
