--- a/index.html
+++ b/index.html
@@ -457,10 +457,24 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>The buttons below are impossible to resist.</h3>
-                    <a href="index2.html#about" class="btn btn-lg btn-light">Click Me!</a>
+                    <a class="btn btn-lg btn-light" id="muestra">Click Me!</a>
                     <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
                 </div>
             </div>
+            <div class="row" id="render">
+              <div class="col-lg-6" >
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+                <div class="col-lg-6" >
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row" id='socios'>
+          <div class="col-lg-6 col-lg-offset-1">
+            <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded thumbnail" height="150" width="200"/>
+            <p>titulo</p>
+          </div>
         </div>
     </aside>
 
@@ -585,7 +599,18 @@
   	$('.modal-title').html(title);
   	$($(this).parents('div').html()).appendTo('.modal-body');
   	$('#myModal').modal({show:true});
+
+
 });
+
+$(document).ready(function(){
+  $('#render').hide();
+  $('#muestra').click(function(){
+    $('#render').toggle('slow');
+  });
+});
+
+
     </script>
 
 </body>
