hopital pie de cuesta

--- a/index.html
+++ b/index.html
@@ -472,8 +472,13 @@
         </div>
         <div class="row" id='socios'>
           <div class="col-lg-6 col-lg-offset-1">
-            <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded thumbnail" height="150" width="200"/>
-            <p>titulo</p>
+            <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
+            <p>hospital local pie de cuesta</p>
+            <p>Gte E.S.E Pablo Caseres Zambrano</p>
+            <p><span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+
+
+
           </div>
         </div>
     </aside>
