--- a/index.html
+++ b/index.html
@@ -461,26 +461,96 @@
                     <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
                 </div>
             </div>
-            <div class="row" id="render">
-              <div class="col-lg-6" >
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              </div>
-                <div class="col-lg-6" >
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-lg-6">
+                  <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
+
                 </div>
+                <div class="col-lg-6">
+                  <p>hospital local pie de cuesta</p>
+                  <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+
+                </div>
+              </div>
+
+
+
+
+            </div>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-lg-6">
+                  <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+                </div>
+                <div class="col-lg-6">
+                  <p>hospital local pie de cuesta</p>
+                  <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+
+                </div>
+              </div>
+
+
+
+
+            </div>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-lg-6">
+                  <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+                </div>
+                <div class="col-lg-6">
+                  <p>hospital local pie de cuesta</p>
+                  <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+
+                </div>
+              </div>
+
+
+
+
+            </div>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-lg-6">
+                  <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+                </div>
+                <div class="col-lg-6">
+                  <p>hospital local pie de cuesta</p>
+                  <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+
+                </div>
+              </div>
+
+
+
+
+            </div>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-lg-6">
+                  <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+                </div>
+                <div class="col-lg-6">
+                  <p>hospital local pie de cuesta</p>
+                  <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+
+                </div>
+              </div>
+
+
+
+
+            </div>
+            <div class="row" id="render">
             </div>
         </div>
-        <div class="row" id='socios'>
-          <div class="col-lg-6 col-lg-offset-1">
-            <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
-            <p>hospital local pie de cuesta</p>
-            <p>Gte E.S.E Pablo Caseres Zambrano</p>
-            <p><span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
 
 
-
-          </div>
-        </div>
     </aside>
 
     <!-- About -->
@@ -609,9 +679,9 @@
 });
 
 $(document).ready(function(){
-  $('#render').hide();
+
   $('#muestra').click(function(){
-    $('#render').toggle('slow');
+    $('#render').load('afiliarse.html');
   });
 });
 
