--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
             </div>
             <div class="col-lg-6">
-              <p>hospital local pie de cuesta</p>
+              <p>HOSPITAL LOCAL PIE DE CUESTA</p>
               <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
 
             </div>
@@ -479,12 +479,12 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-6">
-              <img src="img/socios/centro_de_salud_san_cayetano.jpg" alt="" class="img-rounded" height="150" width=""/>
+              <img src="img/socios/hospital_san_juan_de_dios_floridablanca.jpg" alt="" class="img-rounded" height="150" width=""/>
 
             </div>
             <div class="col-lg-6">
-              <p>hospital local pie de cuesta</p>
-              <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+              <p>HOSPITAL SAN JUAN DE DIOS DE FLORIDABLANCA</p>
+              <p>Gte E.S.E  Edna Ruth Ovalle Zuleta <span class="label label-success">NIT 890.202.024-3 </span>&nbsp  <span class="label label-default">CC 28.428.741</span></p>
 
             </div>
           </div>
@@ -495,12 +495,27 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-6">
-              <img src="img/socios/hospital_piedecuesta.jpg" alt="" class="img-rounded" height="150" width=""/>
+              <img src="img/socios/hospital_nuestra_señora_de_guadalupe.jpg" alt="" class="img-rounded" height="150" width=""/>
 
             </div>
             <div class="col-lg-6">
-              <p>hospital local pie de cuesta</p>
-              <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+              <p>HOSPITAL NUESTRA SEÑORA DE GUADALUPE</p>
+              <p>Gte E.S.E Pablo Sephy Rojas Torres <span class="label label-success">NIT 900.186.802-3 </span>&nbsp  <span class="label label-default">CC 13.720.038 </span></p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="margin-top:20px;">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="img/socios/hospital_manuela_beltran.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+            </div>
+            <div class="col-lg-6">
+              <p>HOSPITAL REGIONAL MANUELA BELTRAN</p>
+              <p>Gte E.S.E Carlos Correa Mosquera <span class="label label-success">NIT 900.190.045-1 </span>&nbsp  <span class="label label-default">CC 8.692.210</span></p>
 
             </div>
           </div>
@@ -508,16 +523,105 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-6">
-              <img src="img/socios/centro_de_salud_san_cayetano.jpg" alt="" class="img-rounded" height="150" width=""/>
+              <img src="img/socios/hospital_regional_garcia_rovira.jpg" alt="" class="img-rounded" height="150" width=""/>
 
             </div>
             <div class="col-lg-6">
-              <p>hospital local pie de cuesta</p>
-              <p>Gte E.S.E Pablo Caseres Zambrano <span class="label label-success">NIT 900.066.345-4 </span>&nbsp  <span class="label label-default">CC 91.493.839</span></p>
+              <p>HOSPITAL REGIONAL GARCIA ROVIRA</p>
+              <p>Gte E.S.E Julian Mauricio Pinzon  <span class="label label-success">NIT 900.067.169-9 </span>&nbsp  <span class="label label-default">CC 91.214.349</span></p>
 
             </div>
           </div>
         </div>
+      </div>
+      <div class="row" style="margin-top:20px;">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="img/socios/hospital_regional_de_san_gil.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+            </div>
+            <div class="col-lg-6">
+              <p>HOSPITAL REGIONAL SAN GIL</p>
+              <p>Gte E.S.E Victor Mauricio Vargas Rangel  <span class="label label-success">NIT 900.066.347-9 </span>&nbsp  <span class="label label-default">CC 91.262.910 </span></p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="img/socios/hospital_de_velez.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+            </div>
+            <div class="col-lg-6">
+              <p>HOSPITAL REGIONAL VELEZ</p>
+              <p>Gte E.S.E Gilma<span class="label label-success">NIT 800.193.904-2 </span>&nbsp  <span class="label label-default">CC 63.541.837 </span></p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="margin-top:20px;">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="img/socios/hospital_san_roque_de_curiti.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+            </div>
+            <div class="col-lg-6">
+              <p>HOSPITAL INTEGRADO SAN ROQUE CURITI</p>
+              <p>Gte E.S.E Orlando Lesmes Castro<span class="label label-success">NIT 890.202.066-2 </span>&nbsp  <span class="label label-default">CC 91.101.157 </span></p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="img/socios/hospital_de_velez.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+            </div>
+            <div class="col-lg-6">
+              <p>HOSPITAL JUAN PABLO II ARATOCA</p>
+              <p>Gte E.S.E Ingrid Paola Diaz Posada<span class="label label-success">NIT 800.193.904-2 </span>&nbsp  <span class="label label-default">63.541.837 </span></p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top:20px;">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="img/socios/hospital_santo_domingo_savio.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+            </div>
+            <div class="col-lg-6">
+              <p>HOSPITAL SANTO DOMINGO SAVIO</p>
+              <p>Gte E.S.E Ana Milena<span class="label label-success">NIT 800.005.555-5 </span>&nbsp  <span class="label label-default">CC 28.218.177 </span></p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="img/socios/centro_de_salud_san_juan_soleri.jpg" alt="" class="img-rounded" height="150" width=""/>
+
+            </div>
+            <div class="col-lg-6">
+              <p>CENTRO DE SALUD JUAN SOLERI</p>
+              <p>Gte E.S.E Victor Pastor Rios Gomez<span class="label label-success">NIT 804.007.611-9 </span>&nbsp  <span class="label label-default">CC 91.508.005 </span></p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
       </div>
 
     </div><!--afiliados-->
