cambio de boton pdf

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 <h3>The buttons below are impossible to resist.</h3>
                 <a class="btn btn-lg btn-light" id="afiliadosBtn">Afiliados</a>
                 <a class="btn btn-lg btn-dark" id="asociarseBtn">Asociarse</a>
-                <a class="btn btn-lg btn-dark" id="showBtn">PDF</a>
+                <a class="btn btn-lg btn-dark" id="showBtn">Estatutos</a>
             </div>
         </div>
         <div id="afiliados">
