--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+escribo
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -476,7 +476,7 @@
                 <h3>The buttons below are impossible to resist.</h3>
                 <a class="btn btn-lg btn-light" id="afiliadosBtn">Afiliados</a>
                 <a class="btn btn-lg btn-dark" id="asociarseBtn">Asociarse</a>
-                <a class="btn btn-lg btn-dark" id="showBtn">Estatutos</a>
+                <a class="btn btn-lg btn-dark" href="img/pdf/introduccion_javascript.pdf" target="_blank" id="showBtn">Estatutos</a>
             </div>
         </div>
         <div id="afiliados">
@@ -818,13 +818,13 @@
         </div>
     </div>
     <!--fin id asociarse-->
-    <div id="pdf">
+    <!-- <div id="pdf">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2" >
                 <embed src="img/pdf/introduccion_javascript.pdf" alt="pdf" width="720" height="500" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
-    </div>
+    </div> -->
 
     </div><!--fin del contenedor principal-->
 </aside>
@@ -848,9 +848,7 @@
 
 <!-- Map -->
 <section id="contact" class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1979.4950215795486!2d-73.1137246!3d7.1271473!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x130ed28f17ba26f0!2sRivera+Plaza!5e0!3m2!1ses!2ses!4v1447734857802"
-            width="100%" height="100%" frameborder="0" style="border:0" scrolling="no" marginheight="0"
-            marginwidth="0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1979.4950215795486!2d-73.1137246!3d7.1271473!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x130ed28f17ba26f0!2sRivera+Plaza!5e0!3m2!1ses!2ses!4v1447734857802" height=""width="100%" height="100%" frameborder="0" style="border:0" scrolling="no" marginheight="0"marginwidth="0"></iframe>
     <br/>
 
 
